# Tinyrenderer-

./: .gitignore  README.md
01_Drawline/: CMakeLists.txt
02_Rasterizer/: CMakeLists.txt  main.cpp
03_Zbuffer/: CMakeLists.txt  main.cpp  model.cpp  model.h
04_Projection/: CMakeLists.txt  main.cpp  model.h  rasterizer.cpp  rasterizer.h
05_Shader/: CMakeLists.txt  Shader.h  main.cpp  model.cpp  rasterizer.cpp  rasterizer.h
Drawline/: geometry.h  main.cpp  model.cpp  model.h
